# ChangeLog for sci-libs/lapack-reference
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-reference/ChangeLog,v 1.51 2010/10/02 20:49:51 grobian Exp $

  26 Apr 2014; Mark Wright <gienah@gentoo.org> lapack-reference-9999.ebuild:
  Add >=virtual/blas-2.1-r2[int64?] and >=virtual/lapack-3.5-r2[int64?] to
  RDEPEND. Use separate eselect modules for lapack and lapack-int64.

  18 Feb 2014; Mark Wright <gienah@gentoo.org> lapack-reference-9999.ebuild,
  metadata.xml:
  multibuild lapack-reference when USE=int64 and/or USE=static is specified.

*lapack-reference-3.5.0 (08 Dec 2013)

  08 Dec 2013; Sébastien Fabbro <bicatali@gentoo.org>
  +lapack-reference-3.5.0.ebuild:
  sci-libs/lapack-reference: Version bump

  22 May 2013; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-reference-9999.ebuild, metadata.xml:
  sci-libs/lapack-reference: Switch to EAPI5, merge live ebuild

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add unocumented USE to metadata.xml

  28 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org>
  lapack-reference-3.4.2.ebuild, metadata.xml:
  sci-libs/lapack-reference: removed tmg flag, now separate ebuild

  28 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  sci-libs/lapack-reference: tmg flag description

  28 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org>
  -lapack-reference-3.3.1-r1.ebuild, -lapack-reference-3.4.1.ebuild,
  lapack-reference-3.4.2.ebuild, lapack-reference-9999.ebuild, metadata.xml:
  sci-libs/lapack-reference: Added tmg use flag, fix a failing post command test

*lapack-reference-3.4.2 (26 Oct 2012)

  26 Oct 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +lapack-reference-3.4.2.ebuild:
  sci-libs/lapack-reference: Version bump. Restore the reflapack library name
  instead of lapack

  25 Apr 2012; Sébastien Fabbro <bicatali@gentoo.org>
  -files/3.4.1-cmake.patch, lapack-reference-3.4.1.ebuild,
  +files/lapack-3.4.1-cmake.patch: